--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "redux-persist": "^4.8.0",
     "redux-promise": "^0.5.3",
     "semantic-ui-react": "^0.78.3",
-    "styled-components": "^3.0.1"
+    "styled-components": "^3.0.1",
+    "uuid-js": "^0.7.5"
   }
 }
